Thu Feb 24 23:02:55 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_hmac.c: parenthesize macro arguments.

Thu Feb 24 22:53:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (love): for the birthday.

Thu Feb 24 22:51:54 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (ruby_vm_destruct): run vm exit hooks after all objects are
	  destructed.

Thu Feb 24 14:40:33 2011  Shota Fukumori  <sorah@tubusu.net>

	* ChangeLog (vim): Modeline for vim

Thu Feb 24 13:39:25 2011  Shota Fukumori  <sorah@tubusu.net>

	* common.mk: Use $RUNRUBY for worker process.

	* lib/test/unit.rb: Fix bug.

	* lib/test/unit.rb: @options[:ruby](@opts[:ruby]) is now Array.

	* test/testunit/parallel.rb: Fix for above.

Thu Feb 24 10:05:55 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/testunit/tests_for_parallel/misc.rb: Fix bug in r30947.

	* lib/test/unit.rb, lib/test/unit/assertions.rb: For this test.

Wed Feb 23 23:07:38 2011  Shota Fukumori  <sorah@tubusu.net>

	* test/testunit/test_parallel.rb, test/testunit/parallel/*:
	  Test for r30939.

	* lib/test/unit.rb: For test.

	* lib/test/parallel.rb: For test.

	* lib/test/unit/testcase.rb: For test.

Wed Feb 23 22:05:13 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_engine.c: parenthesize macro arguments.

Tue Feb 22 23:15:17 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: Fix --ruby option doesn't effect.

	* lib/test/unit.rb: Fix typo.

Tue Feb 22 21:39:28 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_digest.c: parenthesize macro arguments.

Tue Feb 22 14:34:26 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: Fix merging miss.

Tue Feb 22 12:27:26 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb: Add new options; --jobs,-j,--ruby,--jobs-status,
	  --no-retry.
	  [Feature #4415] [ruby-dev:43226],[ruby-dev:43222],[ruby-core:35294]

	* lib/test/unit/parallel.rb: Used at test/unit --jobs(-j) option.
